source/stylesheets/site.css.scss
//--------------Global styling---------------

.fade {
  padding: 50px;
  opacity: 1;
}

body {
  font-family: 'Playfair Display SC', serif;
}

a {
  //removes hyperlink blue text and underlines
  color: inherit;
  text-decoration: none;
}

.row-title {
  text-align: center;
}

//--------------Bootstrap elements styling---------------

.btn {
  white-space: normal;
  font-family: 'Playfair Display SC', serif;
}

//--------------Background styling---------------

body.dark-mode {

  color: white; //font color

  .colored-row {
    //background-color: #3b3b44;
    background-color: #444444;
  }
  .alt-row {
    //background-color: #4c4c56;
    background-color: #595959;
  }

  a:hover {
    color: rgb(41, 43, 44);
  }

  .btn-secondary {
    color: inherit;
    background-color: inherit;
    border-color: inherit;
  }
  .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active, .btn-secondary.active, .btn-secondary:active:focus, .open>.dropdown-toggle.btn-secondary {
    background-color: #3d3d3d;
  }

}

body.light-mode {

  color: rgb(41, 43, 44); //font color

  .colored-row {
    background-color: #f2f2f2;
  }

  a:hover {
    color: #919191;
  }

  .btn-secondary {
    color: inherit;
    background-color: inherit;
    border-color: inherit;
  }
  .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active, .btn-secondary.active, .btn-secondary:active:focus, .open>.dropdown-toggle.btn-secondary {
    background-color: #e5e5e5;
  }

}

//--------------Heading styling---------------

.heading-name {
  h1{
      text-align: center;
      font-size: 81px;
  }
}

.heading-content {
  h2 {
    display: inline-block;
    padding-left: 30px;
    padding-right: 30px;
  }

  text-align: center;
}

//----------------About styling-----------------

.about-content {
  text-align: center;
}

//---------------Quotes styling-----------------

.quotes {
  h4, h5 {
    font-style: italic;
  }

  text-align: center;
}

//--------------Interests styling---------------

.experience-content {
  text-align: center;
  display:inline;

  canvas {
    padding-left: 0;
    padding-right: 0;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 800px;
  }

}

#pie-legend {
  ul {
    list-style: none;
    li {
      padding-bottom: 10px;
    }
  }
  text-align: center;
  font-size: 24px;
}

//--------------Projects styling---------------

.project-content {
  text-align: center;
}

//--------------Footer styling---------------

.legal-content {
  text-align: center;
  font-style: italic;
}

#updated-text {
  text-align: center;
  font-size: 15px;
  margin-bottom: 8px;
}

#created-with-text {
  text-align: center;
  font-size: 12px;
}

.ad {
  text-align: center;
}

.why-ads {
  text-align: center;
  font-size: 12px;
}

